# rambda

./: Cargo.toml  a  request.sh  runtime-api.yaml
func/: Makefile  go.mod  main.go
src/: api.rs  lib.rs  main.rs  types.rs
