[package]
name = "rambda"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.3", features = ["json","macros"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid={version = "1.16.0",features = ["v4"]}
lambda_runtime = "0.9"
env_logger = "0.11"
log = "0.4.27"           
